--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,3 +8,4 @@
 
 <button (click)="Increase()">Increase</button>
 <button (click)="Decrease()">Decrease</button>
+<button (click)="Original()">Original</button>
